# swg-mail-tracker

./: .gitignore  BUILDING.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  USER_GUIDE.md  config.example.json  pyproject.toml
src/: main.py  utils.py
src/core/: api_client.py  config_manager.py  file_watcher.py
src/gui/: main_window.py  monitor_tab.py  settings_tab.py  system_tray.py  theme.py
utils/: auth.py
