[tool.poetry]
name = "swg-mail-tracker"
version = "1.0.0"
description = "SWG Mail Tracker - Desktop application for syncing Star Wars Galaxies in-game mail to swgtracker.com"
authors = ["Lee W <leew@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.0"
watchdog = "^3.0.0"
requests = "^2.31.0"
pystray = "^0.19.5"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
